feat: Add Java toolchain configuration and improve performance logging